# async-test-task

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_jobs.py
backend/app/: config.py  db.py  deps.py  events.py  logging_setup.py  main.py  models.py  queue.py  ratelimit.py  schemas.py
backend/app/routers/: events.py  health.py  jobs.py
backend/tests/: conftest.py  test_auth.py  test_jobs.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts  vite-env.d.ts
frontend/src/components/: JobsTable.tsx  StatusBadge.tsx  SubmitForm.tsx
frontend/src/components/__tests__/: JobsTable.test.tsx  SubmitForm.test.tsx
frontend/src/hooks/: useJobEvents.ts
worker/: package-lock.json  package.json
worker/src/: config.js  db.js  events.js  index.js  logger.js  processor.js
worker/tests/: processor.test.js
